--- a/app/views/accounts/index.html.erb
+++ b/app/views/accounts/index.html.erb
@@ -12,6 +12,7 @@
   <tbody>
     <% @accounts.each do |account| %>
       <tr>
+        <td><%=  account.url %></td>
         <td><%= link_to 'Show', account %></td>
         <td><%= link_to 'Edit', edit_account_path(account) %></td>
         <td><%= link_to 'Destroy', account, method: :delete, data: { confirm: 'Are you sure?' } %></td>
