--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -19,6 +19,10 @@
     <%= f.label :description %><br>
     <%= f.text_area :description %>
   </div>
+  <div class="field">
+    <%= f.label :lead_image %><br>
+    <%= f.file_field :lead_image %>
+  </div>
   <div class="actions">
     <%= f.submit %>
   </div>
