--- a/app/views/sources/_form.html.erb
+++ b/app/views/sources/_form.html.erb
@@ -19,6 +19,11 @@
     <%= f.label :slogan %><br>
     <%= f.text_field :slogan %>
   </div>
+  <div class="field">
+    <%= f.label :avatar %><br>
+    <%= f.file_field :avatar %>
+  </div>
+
   <div class="actions">
     <%= f.submit %>
   </div>
