--- a/app/views/media/show.html.erb
+++ b/app/views/media/show.html.erb
@@ -3,5 +3,9 @@
   <strong>URL:</strong>
   <%= @medium.url %>
 </p>
+<p>
+  <strong>Data:</strong>
+  <%= @medium.data %>
+</p>
 <%= link_to 'Edit', edit_medium_path(@medium) %> |
 <%= link_to 'Back', media_path %>
