--- a/app/views/sources/index.html.erb
+++ b/app/views/sources/index.html.erb
@@ -7,6 +7,7 @@
     <tr>
       <th>Name</th>
       <th>Slogan</th>
+      <th> Download avatar </th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -16,6 +17,7 @@
       <tr>
         <td><%= source.name %></td>
         <td><%= source.slogan %></td>
+        <td><%= link_to 'Download', source.avatar_url %></td>
         <td><%= link_to 'Show', source %></td>
         <td><%= link_to 'Edit', edit_source_path(source) %></td>
         <td><%= link_to 'Destroy', source, method: :delete, data: { confirm: 'Are you sure?' } %></td>
