--- a/app/views/sources/show.html.erb
+++ b/app/views/sources/show.html.erb
@@ -10,5 +10,10 @@
   <%= @source.slogan %>
 </p>
 
+<p>
+  <strong>Avatar:</strong>
+  <%= link_to 'Download Avatar', @source.avatar.url %>
+</p>
+
 <%= link_to 'Edit', edit_source_path(@source) %> |
 <%= link_to 'Back', sources_path %>
