--- a/app/views/team_user_mailer/request_to_join.text.erb
+++ b/app/views/team_user_mailer/request_to_join.text.erb
@@ -1,4 +1,4 @@
-<%= @requestor.name %> wants to join <%= @team.name %> team on Check!
+<%= @requestor.name %> (<%= @handle %>) wants to join <%= @team.name %> team on Check!
 =====================================================================
 
 Go to <%= @url %> to process this request.
