#5681 email copy updates WIP

--- a/app/views/team_user_mailer/request_to_join.text.erb
+++ b/app/views/team_user_mailer/request_to_join.text.erb
@@ -1,4 +1,5 @@
-<%= @requestor.name %> (<%= @handle %>) wants to join <%= @team.name %> team on Check!
+<%= @requestor.name %> (<%= @handle %>) wants to join "<%= @team.name %>" team on Check!
 =====================================================================
 
-Go to <%= @url %> to process this request.
+To process this request, please login and visit
+<%= @url %>
