--- a/app/views/devise_mailer/confirmation_instructions.html.erb
+++ b/app/views/devise_mailer/confirmation_instructions.html.erb
@@ -5,7 +5,7 @@
   </head>
   <body>
     <p>Welcome to Check, <%= @resource.name %>!</p>
-    <p>Go to <%= confirmation_url(@resource, host: @host, confirmation_token: @resource.confirmation_token, client_host: @client_host) %> to confirm your e-mail address.</p>
-    <p>If you didn't want to join Check, just ignore this message.</p>
+    <p>You are only one step away from using Check! Please confirm your email address by clicking the following link:</p>
+    <p><%= confirmation_url(@resource, host: @host, confirmation_token: @resource.confirmation_token, client_host: @client_host) %></p>
   </body>
 </html>
