--- a/app/views/team_user_mailer/request_to_join.html.erb
+++ b/app/views/team_user_mailer/request_to_join.html.erb
@@ -4,7 +4,7 @@
     <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
   </head>
   <body>
-    <p><%= @requestor.name %> (<%= @handle %>) wants to join <%= @team.name %> team on Check!</p>
-    <p>Go to <%= @url %> to process this request.</p>
+    <p><%= @requestor.name %> (<%= @handle %>) wants to join "<%= @team.name %>" team on Check!</p>
+    <p>To process this request, please login and visit <%= @url %></p>
   </body>
 </html>
