#5681 email copy edits

--- a/app/views/team_user_mailer/request_to_join_processed.text.erb
+++ b/app/views/team_user_mailer/request_to_join_processed.text.erb
@@ -2,7 +2,7 @@ Request to join <%= @team.name %> on Check
 ==========================================
 
 <% if @accepted %>
-Your request to join <%= @team.name %> was accepted! Go to the team page at <%= @url %> and start contributing!
+Your request to join <%= @team.name %> was approved! You can now go to the team's page at <%= @url %> and start contributing!
 <% else %>
 Sorry, but your request to join <%= @team.name %> was rejected.
 <% end %>
