--- a/app/views/team_user_mailer/request_to_join_processed.html.erb
+++ b/app/views/team_user_mailer/request_to_join_processed.html.erb
@@ -4,10 +4,10 @@
     <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
   </head>
   <body>
-    <p>Request to join <%= @team.name %> on Check</p>
     <% if @accepted %>
-    <p>Your request to join <%= @team.name %> was accepted! Go to the team page at <%= @url %> and start contributing!</p>
+    <p>Your request to join <%= @team.name %> was approved! You can now go to the team's page at <%= @url %> and start contributing!</p>
     <% else %>
+    <p>Request to join <%= @team.name %> on Check</p>
     <p>Sorry, but your request to join <%= @team.name %> was rejected.</p>
     <% end %>
   </body>
