--- a/app/views/devise_mailer/confirmation_instructions.text.erb
+++ b/app/views/devise_mailer/confirmation_instructions.text.erb
@@ -1,5 +1,5 @@
-Welcome to Check, <%= @resource.name %>!
+<%= I18n.t(:mail_view_welcome, default: "Welcome to Check") %>, <%= @resource.name %>!
 
-You are only one step away from using Check! Please confirm your email address by clicking the following link:
+<%= I18n.t(:mail_view_register, default: "You are only one step away from using Check! Please confirm your email address by clicking the following link:") %>
 
 <%= confirmation_url(@resource, host: @host, confirmation_token: @resource.confirmation_token, client_host: @client_host) %>
