--- a/app/views/team_user_mailer/request_to_join_processed.html.erb
+++ b/app/views/team_user_mailer/request_to_join_processed.html.erb
@@ -5,10 +5,9 @@
   </head>
   <body>
     <% if @accepted %>
-    <p>Your request to join <%= @team.name %> was approved! You can now go to the team's page at <%= @url %> and start contributing!</p>
+      <p><%= I18n.t(:mail_view_joined, default: "Your request to join %{team} was approved! You can now go to the team's page at %{url} and start contributing!", team: @team.name, url: @url) %></p>
     <% else %>
-    <p>Request to join <%= @team.name %> on Check</p>
-    <p>Sorry, but your request to join <%= @team.name %> was rejected.</p>
+      <p><%= I18n.t(:mail_view_rejected_to_join, default: "Sorry, but your request to join %{team} was rejected.", team: @team.name %></p>
     <% end %>
   </body>
 </html>
