--- a/app/views/team_user_mailer/request_to_join_processed.text.erb
+++ b/app/views/team_user_mailer/request_to_join_processed.text.erb
@@ -4,5 +4,5 @@ Request to join <%= @team.name %> on Check
 <% if @accepted %>
 <%= I18n.t(:mail_view_joined, default: "Your request to join %{team} was approved! You can now go to %{url} and start contributing!", team: @team.name, url: @url) %>
 <% else %>
-<%= I18n.t(:mail_view_rejected_to_join, default: "Sorry, but your request to join %{team} was rejected.", team: @team.name %>
+<%= I18n.t(:mail_view_rejected_to_join, default: "Sorry, but your request to join %{team} was rejected.", team: @team.name) %>
 <% end %>
