Ticket #5349 - add unicode for :wave and enqueue e-mail

--- a/app/views/registration_mailer/duplicate_email_detection.html.erb
+++ b/app/views/registration_mailer/duplicate_email_detection.html.erb
@@ -7,7 +7,7 @@
       <p>Hello, this is just a friendly reminder to help make sure you get logged in to Check.</p>
       <p>What happened: You tried to sign in to Check with <%= @login_with %> <%= @user.email %>. But this email address is already associated with <%= @provider %>-based account in Check.</p>
       <p>What to do next: Sign in with <%= @provider %>.</p>
-      <p>Then you'll be logged in with the account you were using before. If you need additional help, please email check@meedan.com. :wave:</p>
+      <p>Then you'll be logged in with the account you were using before. If you need additional help, please email check@meedan.com. 👋</p>
       <p>— The Check team</p>
   </body>
 </html>
