Rename Checkdesk to Check #5499

--- a/app/views/registration_mailer/welcome_email.text.erb
+++ b/app/views/registration_mailer/welcome_email.text.erb
@@ -1,6 +1,6 @@
-Welcome to Checkdesk, <%= @user.name %>!
+Welcome to Check, <%= @user.name %>!
 ========================================
 
-You have successfully signed up to Checkdesk!
+You have successfully signed up to Check!
 To login to the site, just follow this link: <%= @url %>. Enter this e-mail address and this password: <%= @user.password %>
 Thanks for joining and have a great day!
