--- a/app/views/registration_mailer/duplicate_email_detection.text.erb
+++ b/app/views/registration_mailer/duplicate_email_detection.text.erb
@@ -1,1 +1,1 @@
-<%= I18n.t(:mail_duplicate_email_exists_body, user_email: @user.email, user_provider: @user_provider, duplicate_provider: @duplicate_provider) %>
+<%= I18n.t(@mail_body, user_email: @user.email, user_provider: @user_provider, duplicate_provider: @duplicate_provider) %>
