Ticket #5645: Style for errors when changing password

--- a/app/assets/sass/_colors.scss
+++ b/app/assets/sass/_colors.scss
@@ -1,3 +1,5 @@
+$white: #fff;
+
 $firefly-20: #CFD3D5;
 $firefly-40: #9FA6AC;
 $firefly-60: #6F7A82;
@@ -11,3 +13,4 @@ $gray-350: mix(#E0E0E0, #BDBDBD);
 
 $dark-gray-text: theme-gray(5%);
 $light-gray-text: theme-gray(55%);
+$black-54: rgba(0, 0, 0, .54);
