--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -6,10 +6,10 @@
     <%= f.hidden_field :reset_password_token %>
 
     <div class="field">
+      <%= f.password_field :password, autofocus: true, autocomplete: "off", placeholder: "New password" %>
       <% if @minimum_password_length %>
-        <em>(<%= @minimum_password_length %> characters minimum)</em><br />
+        <em>(<%= @minimum_password_length %> characters minimum)</em>
       <% end %>
-      <%= f.password_field :password, autofocus: true, autocomplete: "off", placeholder: 'New password' %>
     </div>
 
     <div class="field">
