Ticket #5872: Add description to settings fields
Also add example to fields
slack_channel
slack_webhook
suggested_tags

--- a/app/views/rails_admin/main/_checklist.html.erb
+++ b/app/views/rails_admin/main/_checklist.html.erb
@@ -19,7 +19,7 @@
   {
     "label": "When?",
     "type": "free_text",
-    "description": "When did the incident take place (provide date and time)",
+    "description": "When did the incident take place",
     "projects": [
       440
     ]
@@ -43,7 +43,7 @@
   {
     "label": "Incident Summary",
     "type": "free_text",
-    "description": "Provide a summary description of the incident.",
+    "description": "Add a summary description of the incident.",
     "projects": [
       440
     ]
