--- a/app/views/rails_admin/main/_source_verification_statuses.html.erb
+++ b/app/views/rails_admin/main/_source_verification_statuses.html.erb
@@ -6,7 +6,7 @@
     {
       "id": "undetermined",
       "label": "Undetermined",
-      "description": "Default, just added to Check, no work has started",
+      "description": "Just added to Check, no work has started",
       "style": {
         "color": "#2e77fc",
         "backgroundColor": "#4183fb",
@@ -16,7 +16,7 @@
     {
       "id": "credible",
       "label": "Credible",
-      "description": "Conclusion: the source is credible",
+      "description": "The source is credible",
       "style": {
         "color": "#5cae73",
         "backgroundColor": "#72d18d",
@@ -26,7 +26,7 @@
     {
       "id": "not_credible",
       "label": "Not Credible",
-      "description": "Conclusion: the source is not credible",
+      "description": "The source is not credible",
       "style": {
         "color": "#f04747",
         "backgroundColor": "#f04747",
@@ -36,7 +36,7 @@
     {
       "id": "slightly_credible",
       "label": "Slightly Credible",
-      "description": "Conclusion: the source is slightly credible",
+      "description": "The source is slightly credible",
       "style": {
         "color": "#efac51",
         "backgroundColor": "#ffbb5d",
@@ -46,7 +46,7 @@
     {
       "id": "sockpuppet",
       "label": "Sockpuppet",
-      "description": "Conclusion: the source is a sockpuppet",
+      "description": "The source is a sockpuppet",
       "style": {
         "color": "rgba(0, 0, 0, .54)",
         "backgroundColor": "rgba(0, 0, 0, .38)",
