--- a/app/assets/stylesheets/rails_admin/custom/theming.scss
+++ b/app/assets/stylesheets/rails_admin/custom/theming.scss
@@ -6,13 +6,15 @@
   }
   pre {
     line-height: 1em;
-    height: 100px;
+    max-height: 100px;
     border: 1px solid #CCC;
     background-color: #EEE;
     margin-top: 5px;
-    resize: vertical;
+    padding: 5px;
+    resize: both;
     &.open {
-      height: auto;
+      height: unset;
+      max-height: none;
     }
   }
 }
