Ticket #5872: Removed project id from checklist example on Admin UI

--- a/app/views/rails_admin/main/_checklist.html.erb
+++ b/app/views/rails_admin/main/_checklist.html.erb
@@ -4,49 +4,37 @@
     "label": "Supporting information",
     "type": "free_text",
     "description": "Add any supporting information",
-    "projects": [
-      440
-    ]
+    "projects": []
   },
   {
     "label": "Contact Details",
     "type": "free_text",
     "description": "Add any contact information (if available)",
-    "projects": [
-      440
-    ]
+    "projects": []
   },
   {
     "label": "When?",
     "type": "free_text",
     "description": "When did the incident take place",
-    "projects": [
-      440
-    ]
+    "projects": []
   },
   {
     "label": "Where?",
     "type": "free_text",
     "description": "Where did the incident take place?",
-    "projects": [
-      440
-    ]
+    "projects": []
   },
   {
     "label": "Original?",
     "type": "free_text",
     "description": "Is the report original?",
-    "projects": [
-      440
-    ]
+    "projects": []
   },
   {
     "label": "Incident Summary",
     "type": "free_text",
     "description": "Add a summary description of the incident.",
-    "projects": [
-      440
-    ]
+    "projects": []
   }
 ]
 </pre>
