--- a/app/views/devise_mailer/reset_password_instructions.html.erb
+++ b/app/views/devise_mailer/reset_password_instructions.html.erb
@@ -4,13 +4,13 @@
     <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
   </head>
   <body>
-    <p>Hello!</p>
+    <p><%= I18n.t('devise.mailer.reset_password_instructions.greeting', :recipient => @resource.email) %></p>
 
-    <p>Someone has requested a link to change your password. You can do this through the link below.</p>
+    <p><%= I18n.t('devise.mailer.reset_password_instructions.instruction') %></p>
 
-    <p><%= link_to 'Change my password', edit_password_url(@resource, host: @host, reset_password_token: @token, format: :json) %></p>
+    <p><%= link_to I18n.t('devise.mailer.reset_password_instructions.action'), edit_password_url(@resource, host: @host, reset_password_token: @token, format: :json) %></p>
 
-    <p>If you didn't request this, please ignore this email.</p>
-    <p>Your password won't change until you access the link above and create a new one.</p>
+    <p><%= t('devise.mailer.reset_password_instructions.instruction_2') %></p>
+    <p><%= t('devise.mailer.reset_password_instructions.instruction_3') %></p>
   </body>
 </html>
