Ticket #5582: Adding mutation to change password and removing old "change password" UI

--- a/app/views/devise_mailer/reset_password_instructions.html.erb
+++ b/app/views/devise_mailer/reset_password_instructions.html.erb
@@ -8,7 +8,7 @@
 
     <p><%= I18n.t('devise.mailer.reset_password_instructions.instruction') %></p>
 
-    <p><%= link_to I18n.t('devise.mailer.reset_password_instructions.action'), edit_password_url(@resource, host: @host, reset_password_token: @token, format: :json) %></p>
+    <p><%= link_to I18n.t('devise.mailer.reset_password_instructions.action'), CONFIG['checkdesk_client'] + '/check/user/password-change?reset_password_token=' + @token %></p>
 
     <p><%= t('devise.mailer.reset_password_instructions.instruction_2') %></p>
     <p><%= t('devise.mailer.reset_password_instructions.instruction_3') %></p>
