Ticket #6057: Add app_name on config and use it on e-mails sent

--- a/app/views/team_user_mailer/request_to_join.text.erb
+++ b/app/views/team_user_mailer/request_to_join.text.erb
@@ -1,4 +1,4 @@
-<%= I18n.t(:mail_view_request_to_join, default: "%{user} (%{handle}) wants to join %{team} team on Check!", user: @requestor.name, handle: @handle, team: @team.name) %>
+<%= I18n.t(:mail_view_request_to_join, default: "%{user} (%{handle}) wants to join %{team} team on %{app_name}!", user: @requestor.name, handle: @handle, team: @team.name, app_name: CONFIG['app_name']) %>
 =====================================================================
 
 <%= I18n.t(:mail_view_process_request, default: "To process this request, please login and visit:") %> <%= @url %>
