--- a/app/views/team_user_mailer/request_to_join_processed.text.erb
+++ b/app/views/team_user_mailer/request_to_join_processed.text.erb
@@ -1,4 +1,4 @@
-Request to join <%= @team.name %> on Check
+Request to join <%= @team.name %> on <%= CONFIG['app_name'] %>
 ==========================================
 
 <% if @accepted %>
