Ticket #6057: Replace `app_name`to `product_name`

--- a/app/views/registration_mailer/welcome_email.html.erb
+++ b/app/views/registration_mailer/welcome_email.html.erb
@@ -4,8 +4,8 @@
     <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
   </head>
   <body>
-    <h1>Welcome to <%= CONFIG['app_name'] %>, <%= @user.name %>!</h1>
-    <p>You have successfully signed up to <%= CONFIG['app_name'] %>!</p>
+    <h1>Welcome to <%= CONFIG['product_name'] %>, <%= @user.name %>!</h1>
+    <p>You have successfully signed up to <%= CONFIG['product_name'] %>!</p>
     <p>To login to the site, just follow this link: <%= @url %>. Enter this e-mail address and this password: <%= @user.password %></p>
     <p>Thanks for joining and have a great day!</p>
   </body>
