--- a/app/views/registration_mailer/welcome_email.text.erb
+++ b/app/views/registration_mailer/welcome_email.text.erb
@@ -1,6 +1,6 @@
-Welcome to <%= CONFIG['app_name'] %>, <%= @user.name %>!
+Welcome to <%= CONFIG['product_name'] %>, <%= @user.name %>!
 ========================================
 
-You have successfully signed up to <%= CONFIG['app_name'] %>!
+You have successfully signed up to <%= CONFIG['product_name'] %>!
 To login to the site, just follow this link: <%= @url %>. Enter this e-mail address and this password: <%= @user.password %>
 Thanks for joining and have a great day!
