--- a/app/views/devise_mailer/confirmation_instructions.html.erb
+++ b/app/views/devise_mailer/confirmation_instructions.html.erb
@@ -4,8 +4,8 @@
     <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
   </head>
   <body>
-    <p><%= I18n.t(:mail_view_welcome, default: "Welcome to %{app_name}", app_name: CONFIG['app_name']) %>, <%= @resource.name %>!</p>
-    <p><%= I18n.t(:mail_view_register, default: "You are only one step away from using %{app_name}! Please confirm your email address by clicking the following link:", app_name: CONFIG['app_name']) %></p>
+    <p><%= I18n.t(:mail_view_welcome, app_name: CONFIG['app_name']) %>, <%= @resource.name %>!</p>
+    <p><%= I18n.t(:mail_view_register, app_name: CONFIG['app_name']) %></p>
     <p><%= confirmation_url(@resource, host: @host, confirmation_token: @resource.confirmation_token, client_host: @client_host) %></p>
   </body>
 </html>
