Ticket #6094: Add variables to configura support email

--- a/app/views/registration_mailer/duplicate_email_detection.text.erb
+++ b/app/views/registration_mailer/duplicate_email_detection.text.erb
@@ -1,1 +1,1 @@
-<%= I18n.t(@mail_body, user_email: @user.email, user_provider: @user_provider, duplicate_provider: @duplicate_provider, app_name: CONFIG['app_name']) %>
+<%= I18n.t(@mail_body, user_email: @user.email, user_provider: @user_provider, duplicate_provider: @duplicate_provider, app_name: CONFIG['app_name'], support_email: CONFIG['support_email']) %>
