--- a/app/views/project_medias/oembed.html.erb
+++ b/app/views/project_medias/oembed.html.erb
@@ -6,7 +6,7 @@
     <meta http-equiv="Content-Language" id="oembed__meta-content-language" content="">
     <title><%= @project_media.title %></title>
     <link href="<%= CONFIG['checkdesk_base_url'] %>/css/oembed.css" rel="stylesheet" type="text/css">
-    <link href="<%= CONFIG['checkdesk_base_url'] %>/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <script src="<%= CONFIG['checkdesk_base_url'] %>/javascripts/jquery-3.2.1.min.js"></script>
     <script src="<%= CONFIG['checkdesk_base_url'] %>/javascripts/timeago/jquery.timeago.js"></script>
 
