Ticket #4846: Use jQuery from CDN too

--- a/app/views/project_medias/oembed.html.erb
+++ b/app/views/project_medias/oembed.html.erb
@@ -7,7 +7,7 @@
     <title><%= @project_media.title %></title>
     <link href="<%= CONFIG['checkdesk_base_url'] %>/css/oembed.css" rel="stylesheet" type="text/css">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-    <script src="<%= CONFIG['checkdesk_base_url'] %>/javascripts/jquery-3.2.1.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
     <script src="<%= CONFIG['checkdesk_base_url'] %>/javascripts/timeago/jquery.timeago.js"></script>
 
     <script>
