--- a/app/views/project_medias/oembed.html.erb
+++ b/app/views/project_medias/oembed.html.erb
@@ -129,7 +129,18 @@
         </div> <!-- / #oembed__notes -->
       <% end %>
     </div>
-  </body>
+  
+    <script src="<%= CONFIG['checkdesk_base_url'] %>/javascripts/oembed.js"></script>
 
-  <script src="<%= CONFIG['checkdesk_base_url'] %>/javascripts/oembed.js"></script>
+    <% unless CONFIG['google_analytics_code'].blank? %>
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+      ga('create', '<%= CONFIG["google_analytics_code"] %>', 'auto');
+      ga('send', 'pageview');
+    </script>
+    <% end %>
+  </body>
 </html>
