--- a/public/css/oembed.css
+++ b/public/css/oembed.css
@@ -55,6 +55,7 @@ html, body {
   margin: 0;
   margin-bottom: 16px;
   text-align: left;
+  flex: 1;
 }
 
 .rtl #oembed__title {
@@ -71,6 +72,7 @@ html, body {
   color: #000;
   display: block;
   text-align: right;
+  flex: 1;
 }
 
 .rtl #oembed__status {
