--- a/app/views/rails_admin/main/_limits.html.erb
+++ b/app/views/rails_admin/main/_limits.html.erb
@@ -4,6 +4,7 @@
 :max_number_of_projects: 1
 :custom_statuses: false
 :slack_integration: false
+:keep_integration: false
 :custom_tasks_list: false
 :browser_extension: false
 </pre>
