--- a/app/views/rails_admin/main/_json_editor.html.erb
+++ b/app/views/rails_admin/main/_json_editor.html.erb
@@ -1,9 +1,10 @@
-<div id="<%= field.method_name.to_s %>_editor_holder"></div>
+<% field_name = field.method_name.to_s %>
+<div id="<%= field_name %>_editor_holder"></div>
 
 <script>
-  var starting_value = <%== @object.send("get_#{field.method_name.to_s}").to_json %>;
-  var field_schema = "<%= @object.json_schema_url(field.method_name.to_s) %>";
-  var editor = new JSONEditor(document.getElementById("<%= field.method_name.to_s %>_editor_holder"),{
+  var starting_value = <%== @object.send("get_#{field_name}").to_json %>;
+  var field_schema = "<%= @object.json_schema_url(field_name) %>";
+  var editor =  new JSONEditor(document.getElementById("<%= field_name %>_editor_holder"),{
     ajax: true,
     theme: 'bootstrap2',
     show_errors: 'interaction',
