Ticket #6268: Checklist options is saved as json and read as hash

--- a/app/views/rails_admin/main/_json_editor.html.erb
+++ b/app/views/rails_admin/main/_json_editor.html.erb
@@ -2,7 +2,7 @@
 <div id="<%= field_name %>_editor_holder"></div>
 
 <script>
-  var starting_value = <%== @object.send("get_#{field_name}").to_json %>;
+  var starting_value = <%== @object.respond_to?(field_name) ? @object.send(field_name).to_json : @object.send("get_#{field_name}").to_json %>;
   var field_schema = "<%= @object.json_schema_url(field_name) %>";
   var editor =  new JSONEditor(document.getElementById("<%= field_name %>_editor_holder"),{
     ajax: true,
