--- a/app/assets/stylesheets/rails_admin/custom/theming.scss
+++ b/app/assets/stylesheets/rails_admin/custom/theming.scss
@@ -18,3 +18,9 @@
     }
   }
 }
+
+#media_verification_statuses_editor_holder,
+#source_verification_statuses_editor_holder,
+#checklist_editor_holder {
+  & > div > h3 > span { display: none }
+}
