--- a/app/assets/stylesheets/rails_admin/custom/variables.scss
+++ b/app/assets/stylesheets/rails_admin/custom/variables.scss
@@ -1,6 +1,13 @@
 $check-blue: #2e77fc;
+$highlight-blue: #f1f6ff;
 $black-87: rgba(0, 0, 0, 0.87);
+$black-75: rgba(0, 0, 0, 0.75);
 $black-05: rgba(0, 0, 0, .05);
+$black-16: rgba(0, 0, 0, .16);
+$black-32: rgba(0, 0, 0, .32);
+$black-54: rgba(0, 0, 0, .54);
+
+// Material bootstrap theme
 $brand-primary: $check-blue;
 $brand-info: $check-blue;
 $link-color: $check-blue;
